--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,10 @@ body {
   /* background-color: #f5f5f5; */
   font-style: normal;
 }
+a.active {
+  color: rgb(230, 152, 8) !important;
+}
+
+a:hover {
+  color: rgb(9, 167, 133) !important;
+}
