--- a/src/Components/NeedHelp.module.css
+++ b/src/Components/NeedHelp.module.css
@@ -80,6 +80,22 @@
   height: 100%;
 }
 
+.button button:hover {
+  cursor: pointer;
+  border: 1px solid #8cee8d;
+  transition: all 0.3s ease;
+  background-color: transparent;
+  color: #087c0a;
+}
+.button button:active {
+  color: #046106;
+  background-color: #8cee8d;
+}
+
+.button a {
+  text-decoration: none;
+}
+
 @media screen and (max-width: 768px) {
   .left {
     flex: 1;
