--- a/src/Pages/ProjectsPage.module.css
+++ b/src/Pages/ProjectsPage.module.css
@@ -118,9 +118,9 @@
   margin-bottom: 10px;
 }
 .description p {
-  font-size: 14px;
+  font-size: 13px;
   color: rgba(0, 0, 0, 0.6);
-  font-family: "Roboto", sans-serif;
+  /* font-family: "Roboto", sans-serif; */
   width: 90%;
 }
 
