--- a/src/Components/LatestBlog.module.css
+++ b/src/Components/LatestBlog.module.css
@@ -24,6 +24,7 @@
   padding-right: 12px;
   display: flex;
   margin-top: -2%;
+  gap: 10px;
   margin-bottom: 10px;
   flex-direction: column;
   justify-content: space-between;
@@ -36,18 +37,18 @@
   flex-direction: column;
 }
 .blogImage {
-  flex: 0.3;
+  flex: 0.4;
 }
 .blogImage img {
-  height: 75%;
+  /* height: 75%; */
   width: 100%;
   object-fit: cover;
 }
 .blogContent {
-  flex: 0.5;
+  flex: 0.6;
   /* border: 1px solid red; */
   padding-left: 10px;
-  margin-top: -13%;
+  /* margin-top: -13%; */
   padding-right: 10px;
 }
 .blogDate {
@@ -61,4 +62,35 @@
 .blogWriter {
   font-size: 15px;
   color: #058e07;
+}
+
+@media screen and (max-width: 768px) {
+  .latestBlog {
+    height: 110%;
+  }
+  .blogCard {
+    flex: 0.4;
+  }
+  .blogImage {
+    max-height: 60%;
+  }
+
+  .blogImage img {
+    max-height: 100%;
+  }
+
+  .blogContent {
+    max-height: 40%;
+  }
+  .blogContent p {
+    /* font-size: 17px; */
+    margin-bottom: 5px;
+  }
+  .blogDate {
+    margin-top: 30px;
+  }
+  .blogCardsContainer {
+    margin-top: -20px;
+    max-height: 90%;
+  }
 }
